--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="sk">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Ads: 624543207 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-624543207"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-624543207');
+</script>
+
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="x-dns-prefetch-control" content="on">
